Jul 26, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Catalan and Spanish translations

Jul 26, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- variable number of server filters
- fix segfault when deleting last player filter entry
- update german translation
- better back up your config before trying this new versoin

July 7, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9.1

Jul 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed segfault when adding servers with no name to favorites
- added RTCW protocol 59

July 4, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9c

July 3, 2002: Alex Burger <alex@fragit_dot_net>
- Changed version to 0.9.9

Jun 30, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added a short explanation about LAN queries to docu
- added gametypes and dmflags for q3 freezetag

Jun 28, 2002: Jordi Mallach <jordi@sindominio.net>
- new Catalan translation
- added a mnemonic to a menu item

Jun 20, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation

May 20, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- increased servers hash
- added some debug output for hash utilization
- use macro QSTAT_EXEC for determining the qstat version as qstat is called
  quakestat on debian (reported by Despair)
- added Ravensoft Elite Force master

May 07, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Added punkbuster label for rtcw. Yes it's ugly but ...

May 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix LAN Browsing for games that need a port change (Rune)
- replaced static struct for q3 options with a more flexible g_datalist
- added preferences tab for q3 memory settings
- renamed STVEFS to EFS to match qstat beta, old servers need to be renamed by
  hand else they will get lost
- added master server preferences tab for voyager elite force (req upcoming
  qstat)
- updated german translation

Apr 23, 2002: Ludwig Nussel <l-n@users.sourceforge.net>